Change 561 on 2000/08/14 by <gbarr@pobox.com> (Graham Barr)

	Fix typo in IO.pm

Change 558 on 2000/08/01 by <gbarr@pobox.com> (Graham Barr)

	Added options for encode/decode of UTCTime and Generalized time

Change 557 on 2000/08/01 by <gbarr@pobox.com> (Graham Barr)

	Add support to decode indefinate lengths

Change 556 on 2000/08/01 by <gbarr@pobox.com> (Graham Barr)

	Performance tweaks to IO

Change 555 on 2000/08/01 by <gbarr@pobox.com> (Graham Barr)

	asn_decode_length(), return a length of -1 for indefinate lengths

Change 534 on 2000/06/05 by <gbarr@pobox.com> (Graham Barr)

	Another syntax change in Debug.pm for 5.004 support

Change 531 on 2000/05/30 by <gbarr@pobox.com> (Graham Barr)

	Release 0.07

Change 530 on 2000/05/30 by <gbarr@pobox.com> (Graham Barr)

	Assert an error if there is nothing to encode for a CHOICE

Change 528 on 2000/05/22 by <gbarr@pobox.com> (Graham Barr)

	One more for 5.004

Change 524 on 2000/05/22 by <gbarr@pobox.com> (Graham Barr)

	Release 0.06

Change 523 on 2000/05/22 by <gbarr@pobox.com> (Graham Barr)

	Now works with 5.004, tested on 5.004, 5.005_03, 5.6.0

Change 515 on 2000/05/12 by <gbarr@pobox.com> (Graham Barr)

	Release 0.05

Change 514 on 2000/05/11 by <gbarr@pobox.com> (Graham Barr)

	Fix bug in encoding an integer where one to few bytes would be
	encoded causing the sign to change on decode.

Change 513 on 2000/05/09 by <gbarr@pobox.com> (Graham Barr)

	Fix to asn_read for unit warning when first char of L is > 0x80

Change 509 on 2000/05/04 by <gbarr@pobox.com> (Graham Barr)

	Convert::ASN1::IO
	- fix == instead of = typo

Change 508 on 2000/05/04 by <gbarr@pobox.com> (Graham Barr)

	Convert::ASN1::IO
	- fix bug in asn_read where the FH was passed instead of
	  the buffer to sysread
	- fix bug in asn_recv where we has substr($buf,$len) instead
	  of substr($buf,0,$len)
	- make asn_recv break out of the loop if recv with MSG_PEEK
	  gives less chars than what was asked for
