@@ -1,3 +1,11 @@
+Change 601 on 2000/09/18 by <gbarr@pobox.com> (Graham Barr)
+
+	Fix typo in configure
+
+Change 600 on 2000/09/18 by <gbarr@pobox.com> (Graham Barr)
+
+	More robust REAL encode
+
 Change 561 on 2000/08/14 by <gbarr@pobox.com> (Graham Barr)
 
 	Fix typo in IO.pm
